Add GUI rough draft

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-
+    <div class="board">
+        <div class="boardRow">
+            <button id="00" name='0-0' class="boardSpace"></button>
+            <button id="01" name='0-1' class="boardSpace"></button>
+            <button id="02" name='0-2' class="boardSpace"></button>
+        </div>
+        <div class="boardRow">
+            <button id="10" name='1-0' class="boardSpace"></button>
+            <button id="11" name='1-1' class="boardSpace"></button>
+            <button id="12" name='1-2' class="boardSpace"></button>
+        </div>
+        <div class="boardRow">
+            <button id="20" name='2-0' class="boardSpace"></button>
+            <button id="21" name='2-1' class="boardSpace"></button>
+            <button id="22" name='2-2' class="boardSpace"></button>
+        </div>
+    </div>
 </body>
 </html>
