update screen control logic

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
+    <div class="player"></div>
     <div class="board">
         <div class="boardRow">
             <button id="00" name='0-0' class="boardSpace"></button>
